--- a/index.css
+++ b/index.css
@@ -5,11 +5,7 @@
 .persoonlijk{
    text-align: center;
 }
-table{
-   border:3px solid;
-   
-  
-}
+
 .textarea{
 float:right;
 }
@@ -19,4 +15,16 @@ float:right;
 .btn{
    width: 80px;
    height: 25px;
+}
+.pizza{
+   margin-left:50px;
+}
+.pizzat{
+   margin-left:10px;
+}
+table{
+   border: 1px solid;
+}
+.pizzamenu{
+   margin-top:-43px;
 }
